# scoop-witness-api

./: .gitignore  README.md  install.sh  package-lock.json  package.json  pyproject.toml  wsgi.py
.github/workflows/: lint.yml  tests.yml
scoop_witness_api/: __init__.py  config.example.py  conftest.py
scoop_witness_api/commands/: __init__.py  cancel_access_key.py  cleanup.py  create_access_key.py  create_tables.py  inspect_capture.py  start_capture_process.py  start_parallel_capture_processes.py  status.py
scoop_witness_api/models/: __init__.py  access_key.py  capture.py
scoop_witness_api/tests/commands/: test_cancel_access_key.py  test_cleanup.py  test_create_access_key.py  test_inspect_capture.py  test_start_capture_process.py  test_status.py
scoop_witness_api/tests/views/: test_artifact.py  test_capture.py  test_ping.py
scoop_witness_api/utils/: __init__.py  access_check.py  capture_to_dict.py  config_check.py  get_db.py
scoop_witness_api/views/: __init__.py  artifact.py  capture.py  ping.py
